--- a/phiscord/package.json
+++ b/phiscord/package.json
@@ -1,9 +1,9 @@
 {
   "private": true,
-  "name": "my-nextron-app",
-  "description": "My application description",
+  "name": "phiscord",
+  "description": "A social app that centers around messaging and calling with a bunch of cool features.",
   "version": "1.0.0",
-  "author": "Yoshihide Shiono <shiono.yoshihide@gmail.com>",
+  "author": "torpadeka",
   "main": "app/background.js",
   "scripts": {
     "dev": "nextron",
@@ -15,7 +15,10 @@
     "clsx": "^2.1.1",
     "electron-serve": "^1.3.0",
     "electron-store": "^8.2.0",
+    "firebase": "^10.12.2",
+    "firebaseui": "^6.1.0",
     "lucide-react": "^0.395.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.2.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
