--- a/phiscord/package.json
+++ b/phiscord/package.json
@@ -11,7 +11,9 @@
     "postinstall": "electron-builder install-app-deps"
   },
   "dependencies": {
-    "@radix-ui/react-slot": "^1.0.2",
+    "@hookform/resolvers": "^3.6.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "electron-serve": "^1.3.0",
@@ -20,9 +22,11 @@
     "firebaseui": "^6.1.0",
     "lucide-react": "^0.395.0",
     "react-firebase-hooks": "^5.1.1",
+    "react-hook-form": "^7.52.0",
     "react-icons": "^5.2.1",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20.11.16",
