--- a/phiscord/renderer/.env.local
+++ b/phiscord/renderer/.env.local
@@ -5,3 +5,4 @@ NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=phiscord-4e85d.appspot.com
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=493151076592
 NEXT_PUBLIC_FIREBASE_APP_ID=1:493151076592:web:e32db014728e885acec235
 NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=G-47ZRDYP0B6
+NEXT_PUBLIC_FIREBASE_DATABASE_URL=https://phiscord-4e85d-default-rtdb.asia-southeast1.firebasedatabase.app
