--- a/phiscord/package.json
+++ b/phiscord/package.json
@@ -17,13 +17,16 @@
     "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "electron-serve": "^1.3.0",
     "electron-store": "^8.2.0",
+    "emoji-picker-react": "^4.10.0",
     "firebase": "^10.12.2",
     "firebaseui": "^6.1.0",
     "lucide-react": "^0.395.0",
+    "react-dom": "^18.3.1",
     "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.52.0",
     "react-icons": "^5.2.1",
