--- a/phiscord/package.json
+++ b/phiscord/package.json
@@ -21,11 +21,16 @@
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-tooltip": "^1.1.1",
+    "agora-access-token": "^2.0.4",
+    "agora-rtc-react": "^2.2.0",
+    "agora-rtc-sdk-ng": "^4.21.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
     "electron-serve": "^1.3.0",
     "electron-store": "^8.2.0",
     "emoji-picker-react": "^4.10.0",
+    "express": "^4.19.2",
     "firebase": "^10.12.2",
     "firebaseui": "^6.1.0",
     "lucide-react": "^0.395.0",
@@ -40,7 +45,8 @@
   },
   "devDependencies": {
     "@types/node": "^20.11.16",
-    "@types/react": "^18.2.52",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.19",
     "electron": "^31.0.1",
     "electron-builder": "^24.13.3",
@@ -50,6 +56,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwindcss": "^3.4.3",
-    "typescript": "^5.4.5"
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.5.3"
   }
 }
