Added some more fixes and minor features, + re-set up agora calls

--- a/phiscord/package.json
+++ b/phiscord/package.json
@@ -26,6 +26,7 @@
     "agora-access-token": "^2.0.4",
     "agora-rtc-react": "^2.2.0",
     "agora-rtc-sdk-ng": "^4.21.0",
+    "bad-words": "^3.0.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
