--- a/phiscord/package.json
+++ b/phiscord/package.json
@@ -38,6 +38,7 @@
     "firebaseui": "^6.1.0",
     "lucide-react": "^0.395.0",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.2.3",
     "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.52.0",
     "react-icons": "^5.2.1",
